@@ -16,8 +16,8 @@ import edu.wpi.first.wpilibj.smartdashboard.SendableBuilderImpl;
 import edu.wpi.first.wpilibj.test.AbstractComsSetup;
 import edu.wpi.first.wpilibj.test.TestBench;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.logging.Logger;
 import org.junit.After;
 import org.junit.AfterClass;
@@ -78,7 +78,7 @@ public class PIDTest extends AbstractComsSetup {
     double kd = 0.0;
     for (int i = 0; i < 1; i++) {
       data.addAll(
-          Arrays.asList(
+          List.of(
               new Object[][] {
                 {kp, ki, kd, TestBench.getTalonPair()},
                 {kp, ki, kd, TestBench.getVictorPair()},
